--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,20 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>%REACT_APP_WEBSITE_TITLE%</title>
+
+    <!-- Hotjar Tracking Code for https://www.greenpeace.org.ar -->
+    <script>
+      (function(h,o,t,j,a,r){
+          h.hj = h.hj || function() {
+            (h.hj.q=h.hj.q||[]).push(arguments)
+          };
+          h._hjSettings={hjid:2619010,hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
