--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <title>%REACT_APP_WEBSITE_TITLE%</title>
 
     <!-- Hotjar Tracking Code for https://www.greenpeace.org.ar -->
-    <script>
+    <!-- <script>
       (function(h,o,t,j,a,r){
           h.hj = h.hj || function() {
             (h.hj.q=h.hj.q||[]).push(arguments)
@@ -28,7 +28,7 @@
           r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
           a.appendChild(r);
       })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
+    </script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
